2011-04-25 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- fixed bug: axis line paths are now closed (using --cycle for boxed axes)

2011-04-20 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- table package: added 'every row <index> column <index>' styles and their
	variants.
	- table package: added 'string replace*' preprocessor style.
	- table package: improved style evaluation of cell formatting styles
	preproc cell content, assign cell content, and postproc cell content

2011-04-18 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- fixed incompatibility with memoir class: now, 'legend to name' works
	also in memoir subfigures.
	- improved error message of table package when encountered encoding problems

2011-04-17 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- implemented /pgf/number format/relative formatting style
	- adjusted every contour label style to use the new relative number
	formatting style.

2011-04-16 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- fixed bug: new CMYK interpolation in colormaps inserted a comma at the wrong position
	- worked on docs

2011-03-16 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- experimented with 'smithchart mirrored' feature

2011-03-13 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- improved 'scale uniformly' such that it also works for 2d axes.
	- wrote first draft for docs on 'scale mode'.

2011-03-11 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- dateplot lib: fixed rounding inaccuracy which allowed 0:60 instead of 1:00

2011-03-09 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- Improved manual (version numbers, mail address)
	- Improved default styles for polar lib (title style and legend style)
	- Improved default styles for smithchart lib (title style and legend style)

2011-02-27 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- finished a lot of refactoring applied to the test framework.