@@ -1,5 +1,6 @@
 2011-04-25 Christian Feuersaenger <ludewich@users.sourceforge.net>
 	- fixed bug: axis line paths are now closed (using --cycle for boxed axes)
+		-> causes regressions with axis line decorations
 
 2011-04-20 Christian Feuersaenger <ludewich@users.sourceforge.net>
 	- table package: added 'every row <index> column <index>' styles and their
